[package]
name = "gme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = ["dynamic_linking", "trace"] }
rand = "0.8"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3